// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> error renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <input
    aria-describedby="form-0_mock--error"
    id="form-0_mock"
    type="text"
    value=""
  />
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Input /> help renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
    <span>
      Help
    </span>
  </label>
  <input
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> label renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Label
  </label>
  <input
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <input
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;
